<resources>
    <string name="app_name">Prueba2_FlagQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Country</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">
        One region must be selected. Setting Europe as the default region.
    </string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Siguiente Nivel</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">Europe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="txt_login">Ingreso al juego</string>
    <string name="btn_login">Ingresar</string>
    <string name="txt_credentials">Credenciales de acceso (2 usuarios):</string>
    <string name="txt_user1">User: admin --- Pass: admin</string>
    <string name="txt_user2">User: invitado --- Pass: invitado</string>
    <string name="txt_user">Usuario</string>
    <string name="txt_password">Contraseña</string>
</resources>
